[package]
name = "dots-and-boxes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
rand = "0.8.5"

[dependencies.getrandom]
version = "0.2.7"

features = [
    "js",
    "js-sys",
]

[dependencies.web-sys]
version = "0.3"

features = [
    "console",
]
